fixed some mobile alignment
issues regarding alignment on mobile devices still persisted so i updted code again

--- a/style.css
+++ b/style.css
@@ -74,7 +74,8 @@ footer{
     padding: 20px;
     padding-right: 20px;
     padding-left: 20px;
-    padding-top: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     width:auto;
     font-size:16px;
 }
